+function to simulate psychometric data

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,4 +13,5 @@ export(runLM)
 export(shuffleAndRecomputeMAC)
 export(shuffleSubjects)
 export(simulateGeneData)
+export(simulatePsychometricData)
 importFrom(MASS,mvrnorm)
